[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/transparent_tile.png" type="Texture" id=1]
[ext_resource path="res://assets/LiberationSans/LiberationSansRegular.tres" type="DynamicFontData" id=2]
[ext_resource path="res://gui/inventory/BagSlot/BagSlot.gd" type="Script" id=3]

[sub_resource type="StyleBoxFlat" id=1]

[sub_resource type="AtlasTexture" id=2]
resource_local_to_scene = true
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 320, 32, 32 )

[sub_resource type="DynamicFont" id=3]
size = 14
font_data = ExtResource( 2 )

[node name="BagSlot" type="Panel"]
margin_right = 40.0
margin_bottom = 40.0
custom_styles/panel = SubResource( 1 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ItemIcon" type="TextureRect" parent="."]
margin_right = 40.0
margin_bottom = 40.0
rect_min_size = Vector2( 32, 32 )
texture = SubResource( 2 )
expand = true
stretch_mode = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ItemQuantity" type="Label" parent="."]
margin_left = 24.0
margin_top = 24.0
margin_right = 40.0
margin_bottom = 40.0
custom_fonts/font = SubResource( 3 )
align = 2
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="gui_input" from="." to="." method="_on_BagSlot_gui_input"]
